fix new logo too big for mobile

--- a/css/helper.css
+++ b/css/helper.css
@@ -125,7 +125,7 @@ p {
 }
 img {
   display: block;
-  max-width: 80%;
+  max-width: 70%;
   height: auto;
 }
 .el-parallax {
